# chatbot-fastapi-nextjs

server/: .env  compose.yml  pyproject.toml
server/db/: db.py
